Cambios en descripciones textuales y modelado de casos de uso

--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/modificarComprobante.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/modificarComprobante.tex
@@ -14,8 +14,8 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador indica el comprobante que desea modificar.}%1
-    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con el número de comprobante, tipo de comprobante y monto. Siendo requeridos todos los campos.}%2
-    \addCaseUseStep{El administrador modifica el número de comprobante, tipo de comprobante y monto.}%3
+    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con el número de comprobante, tipo de comprobante, monto total y observaciones. Indicando que todos los campos son obligatorios excepto el de obserevaciones.}%2
+    \addCaseUseStep{El vendedor modifica el formulario.}
     \addCaseUseStep{ZMGestion modifica el comprobante con los nuevos valores ingresados por el administrador.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
