--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionGruposProducto/crearGrupoProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionGruposProducto/crearGrupoProducto.tex
@@ -15,8 +15,8 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador accede a la pantalla para crear grupos de productos.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre del grupo de productos.}
-    \addCaseUseStep{El administrador ingresa un nombre de grupo de productos.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre del grupo de productos y una descripcion. Indicando que el nombre del grupo es obligatorio.}
+    \addCaseUseStep{El administrador completa el formulario.}
     \addCaseUseStep{ZMGestion crea el grupo de productos con los campos ingresados por el administrador y muestra un mensaje indicando el éxito de la operación. }
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
