--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionGruposProducto/modificarGrupoProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionGruposProducto/modificarGrupoProducto.tex
@@ -15,8 +15,8 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador selecciona el grupo de producto que desea modificar.}
-    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con el nombre del grupo de productos seleccionado.}
-    \addCaseUseStep{El administrador modifica el nombre del grupo de productos.}
+    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con el nombre y descripcion del grupo de productos seleccionado. Indicando que el nombre del grupo de producto es obligatorio.}
+    \addCaseUseStep{El administrador modifica el nombre y la descripcion del grupo de productos.}
     \addCaseUseStep{ZMGestion modifica el nombre del grupo de productos con el nuevo valor ingresado por el administrador y muestra un mensaje indicando el éxito de la operación.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
