--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/crearProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/crearProducto.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador accede a la pantalla para crear productos. }
-    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre del producto, el precio unitario, la cantidad de metros de tela que deben utilizarse para producirlo, tipo de producto y dos listas desplegables para seleccionar el grupo y categoría de productos a los cuales pertenece el mismo. Indicando que todos los campos menos la cantidad de metros de tela son requeridos.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre del producto, el precio unitario, la cantidad de metros de tela que deben utilizarse para producirlo, tipo de producto, observaciones y dos listas para seleccionar el grupo y categoría de productos a los cuales pertenece el mismo. Indicando que todos los campos menos la cantidad de metros de tela y observaciones son obligatorios.}
     \addCaseUseStep{El administrador completa los campos del formulario.}
     \addCaseUseStep{ZMGestion crea al producto con los campos ingresados por el usuario y muestra un mensaje indicando el éxito de la operación. }
 }
