--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/crearRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/crearRemito.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El vendedor accede a la pantalla para crear remitos.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione el tipo de remito (Entrada o Salida), la ubicación, de entrada o salida según corresponda. Indicando que todos los campos son obligatorios.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione el tipo de remito (Entrada o Salida), la ubicación, de entrada o salida según corresponda e ingrese observaciones,. Indicando que todos los campos son obligatorios excepto por las observaciones.}
     \addCaseUseStep{El vendedor completa los campos requeridos.} 
     \addCaseUseStep{Si el vendedor desea agregar una linea de remito se ejecuta el \CUcrearLineaRemito (Crear linea de remito). Si el vendedor desea borrar una linea de remito se ejecuta el \CUborrarLineaRemito (Borrar linea de remito). Si el vendedor desea modificar una linea de remito se ejecuta el \CUmodificarLineaRemito (Modificar linea de remito).}
     \addCaseUseStep{ZMGestion crea el remito con los valores indicados por el vendedor.}
