--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRoles/crearRol.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRoles/crearRol.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador accede a la pantalla para crear roles.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre del rol y seleccione todos los permisos que desea otorgarle. Indicando que ambos campos son obligatorios.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre del rol, descripción y seleccione todos los permisos que desea otorgarle. Indicando todos los campos son obligatorios excepto el de descripción.}
     \addCaseUseStep{El administrador completa los campos requeridos del formulario.}
     \addCaseUseStep{ZMGestion crea el rol y muestra un mensaje indicando el éxito de la operación.}
 }
