--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRoles/modificarRol.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRoles/modificarRol.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador indica el rol que desea modificar.}
-    \addCaseUseStep{ZMGestion muestra un formulario autocmpletado con los datos del rol seleccionado para que el administrador modifique: nombre y permisos asignados. Indicando que ambos campos son obligatorios.}
+    \addCaseUseStep{ZMGestion muestra un formulario autocmpletado con los datos del rol seleccionado para que el administrador modifique: nombre, descripción y permisos asignados. Indicando todos los campos son obligatorios excepto el de descripción.}
     \addCaseUseStep{ZMGestion modifica el rol y muestra un mensaje indicando el éxito de la operación.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
