--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/crearTela.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/crearTela.tex
@@ -14,7 +14,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador accede a la pantalla para crear telas.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre de la tela y el precio por metro. Indicando que todos los campos son obligatorios.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre de la tela, el precio por metro y observaciones. Indicando que todos los campos son obligatorios menos el de observaciones.}
     \addCaseUseStep{El administrador completa los campos requeridos del formulario.}
     \addCaseUseStep{ZMGestion crea la tela con los campos ingresador por el usuario y muestra un mensaje indicando el éxito de la operación.}
 }
