--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/modificarTela.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/modificarTela.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador indica la tela que quiere modificar.}
-    \addCaseUseStep{ZMGestion muetsra un formulario autocompletado con los datos de la tela seleccionada para que el administrador modifique: nombre y precio por metro.}
+    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos de la tela seleccionada para que el administrador modifique: nombre, precio por metro y observaciones. Indicando que todos los campos son obligatorios excepto el de observaciones.}
     \addCaseUseStep{El administrador modifca los datos que desea cambiar.}
     \addCaseUseStep{ZMGestion modifica la tela y muestra un mensaje indicando el éxito de la operación}
 
