--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/crearUbicacion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/crearUbicacion.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador accede a la pantalla para crear ubicaciones.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre de la ubicación, la calle y el número, el código postal y seleccione ciudad, provincia y país. Inidicando que todos los campos son obligatorios.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese el nombre de la ubicación, la calle y el número, el código postal, observaciones y seleccione ciudad, provincia y país. Inidicando que todos los campos son obligatorios excepto el de observaciones.}
     \addCaseUseStep{El administrador completa el formulario.}
     \addCaseUseStep{ZMGestion crea la ubicación y muestra un mensaje indicando el éxito de la operación.}
 }
