--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/modificarUbicacion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/modificarUbicacion.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador inidca la ubicación que desea modificar.}
-    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos de la ubicación seleccionada para que el administrador modifique: nombre de la ubicación y dirección (nombre y número de calle, código postal, ciudad, provincia y pais) de la misma. Indicando que todos los campos son obligatorios.}
+    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos de la ubicación seleccionada para que el administrador modifique: nombre de la ubicación, observaciones y dirección (nombre y número de calle, código postal, ciudad, provincia y pais) de la misma. Indicando que todos los campos son obligatorios excepto el de observaciones.}
     \addCaseUseStep{El administrador modifica los datos que desea cambiar de la ubicación.}
     \addCaseUseStep{ZMGestion modifica la ubicación y muestra un mensaje de éxito.}
 }
