--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -180,7 +180,7 @@
 			\itemCaseUse{listarLineasOrdenProduccion}{Listar lineas de orden de producción}
 			\itemCaseUse{borrarOrdenProduccion}{Borrar orden de producción}
 			\itemCaseUse{cancelarOrdenProduccion}{Cancelar orden de producción}
-			\itemCaseUse{listarObservacionesLineaOrdenProduccion}{Listar observaciones de línea de orden de producción}
+		
 			\itemCaseUse{listarTareasLineaOrdenProduccion}{Listar tareas de línea de orden de producción}
 		\end{itemize}
 		\item Gestión líneas de órdenes de producción
@@ -191,10 +191,11 @@
 			\itemCaseUse{verificarLineaOrdenProduccion}{Verificar línea de orden de producción}
 			\itemCaseUse{cancelarLineaOrdenProduccion}{Cancelar línea de orden de producción}	
 			\itemCaseUse{reanudarLineaOrdenProduccion}{Reanudar línea de orden de producción}		
-		\end{itemize}
+		\end{itemize}s
 		\item Gestión observaciones
 		\begin{itemize}
 			\itemCaseUse{crearObservacion}{Crear observación}
+			\itemCaseUse{listarObservaciones}{Listar observaciones}
 			\itemCaseUse{borrarObservacion}{Borrar observación}
 		\end{itemize}
 		\item Gestión tareas
@@ -488,7 +489,6 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarLineasOrdenProduccion.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/borrarOrdenProduccion.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/cancelarOrdenProduccion.tex}
-			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarObservacionesLineaOrdenProduccion.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarTareasLineaOrdenProduccion.tex}
 
 			%GestionLineasOrdenesProduccion
@@ -501,6 +501,7 @@
 
 			%GestionObservaciones
 			\input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/crearObservacion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/listarObservaciones.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/borrarObservacion.tex}
 			
 			%GestionTareas
