--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex
@@ -14,8 +14,8 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador desea agregar una linea de orden de producción a una determinada orden de producción.}
-    \addCaseUseStep{ZMGestion le muestra un formulario para que el administrador seleccione un producto, tela, lustre e indique la cantidad a producir de dicho producto.}
-    \addCaseUseStep{El administrador selecciona producto, tela, lustre y la cantidad que desea producir.}
+    \addCaseUseStep{ZMGestion le muestra un formulario para que el administrador seleccione un producto, tela, lustre e indique la cantidad a producir de dicho producto. Indicando que el producto y la cantidad son obligatorios.}
+    \addCaseUseStep{El administrador completa el formulario.}
     \addCaseUseStep{ZMGestion crea la linea de orden de producción en estado `Pendiente de producción' y la asocia a la orden de producción correspondiente.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
@@ -30,8 +30,14 @@
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
     \newAlternative{A3: El tipo de producto seleccionado no es del tipo `Producible'.}{3} %Flujo alternativo A1.
-    \caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
+    \caseUseRow{La secuencia A3 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que el producto seleccionado no puede ser asignado a una orden de producción.}
+    \caseUseRow{El escenario vuelve al punto 2.}
+    \caseUseRow{}
+
+    \newAlternative{A4: El administrador ha dejado un campo obligatorio vacio.}{3} %Flujo alternativo A1.
+    \caseUseRow{La secuencia A4 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que ha dejado un campo obligatorio vacio.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 }
