--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionObservaciones/borrarObservacion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionObservaciones/borrarObservacion.tex
@@ -7,13 +7,13 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion borrar una observación de una línea de orden de producción existente.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere borrar una observación de una línea de orden de producción.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUlistarObservacionesLineaOrdenProduccion\ (Listar observaciones de línea de orden de producción) y contar con los permisos necesarios para realizar esta función.} %Precondiciones
+	\caseUseRow{Haber realizado con éxito el \CUlistarObservaciones\ (Listar observaciones) y contar con los permisos necesarios para realizar esta función.} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
-    \addCaseUseStep{El administrador selecciona la observación que desea borrar de una línea de orden de producción.}
+    \addCaseUseStep{El administrador selecciona la observación que desea borrar }
     \addCaseUseStep{ZMGestion borra la observación seleccionada por el administrador.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
