--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionObservaciones/crearObservacion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionObservaciones/crearObservacion.tex
@@ -4,19 +4,26 @@
 \renewcommand{\caseUseModified}{05/03/2020} %Fecha modificación
 \renewcommand{\caseUseName}{\CUcrearObservacion - Crear observación} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion crear una observación en una línea de orden de producción existente.} %Resumen
-\renewcommand{\caseUsePeople}{Administradores: quiere crear una observación en una línea de orden de producción.} %Actor: Meta
+\renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion crear una observación para un linea de presupuesto, venta, orden de producción o remito determinada.} %Resumen
+\renewcommand{\caseUsePeople}{Vendedores: quiere crear una observación en una línea de presupuesto, venta, orden de producción o remi.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUlistarLineasOrdenProduccion\ (Listar líneas de orden de producción).} %Precondiciones
+    \caseUseRow{Haber realizado con éxito alguno de los siguientes casos de uso: 
+    \begin{itemize}
+        \item \CUlistarLineasPresupuesto\ (Listar líneas de presupuesto).
+        \item \CUlistarLineasVenta\ (Listar líneas de venta).
+        \item \CUlistarLineasOrdenProduccion\ (Listar líneas de orden de producción).
+        \item \CUlistarLineasRemito\ (Listar líneas de remito.).
+    \end{itemize} 
+    } %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
-    \addCaseUseStep{El administrador selecciona una línea de orden de producción a la cual le desea crear una observación.}
+    \addCaseUseStep{El vendedor selecciona una línea de presupuesto, venta, orden de producción o remito a la cual le desea crear una observación.}
     \addCaseUseStep{ZMGestion muestra un formulario para que el administrador ingrese una observación.}
-    \addCaseUseStep{El administrador ingresa una observación.}
-    \addCaseUseStep{ZMGestion crea la observación para la línea de orden de producción seleccionada por el administrador.}
+    \addCaseUseStep{El vendedor ingresa una observación.}
+    \addCaseUseStep{ZMGestion crea la observación para la línea de presupuesto, venta, orden de producción o remito seleccionada por el vendedor.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
 	\newAlternative{A1: No ha ingresado ninguna observación.}{3} %Flujo alternativo A1.
