--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/crearPresupuesto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/crearPresupuesto.tex
@@ -15,9 +15,9 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El vendedor accede a la pantalla para crear presupuestos.}
-    \addCaseUseStep{ZMGestion le muestra un formulario para que el vendedor seleccione un cliente. Además se muestra un campo autocompletado con el periodo de validez, si tiene permisos puede modificarlo. }
-    \addCaseUseStep{El vendedor selecciona un cliente y modifica el periodo de validez.}%3
-    \addCaseUseStep{ZMGestion crea un presupuesto en estado de `En creación' para el cliente con el periodo de validez ingresado por el vendedor.}%4
+    \addCaseUseStep{ZMGestion le muestra un formulario para que el vendedor seleccione un cliente y observaciones. Además se muestra un campo autocompletado con el periodo de validez, si tiene permisos puede modificarlo. Indicando que el cliente es obligatorio. }
+    \addCaseUseStep{El vendedor selecciona un cliente, ingresa observaciones y modifica el periodo de validez.}%3
+    \addCaseUseStep{ZMGestion crea un presupuesto en estado de `En creación' para el cliente con el periodo de validez y observaciones ingresado por el vendedor.}%4
     \addCaseUseStep{Si el vendedor desea agregar una linea de presupuesto se ejecuta el \CUcrearLineaPresupuesto (Crear linea de presupuesto). Si el vendedor desea borrar una linea de presupuesto se ejecuta el \CUborrarLineaPresupuesto (Borrar linea de presupuesto). Si el vendedor desea modificar una linea de presupuesto se ejecuta el \CUmodificarLineaPresupuesto (Modificar linea de presupuesto).}%5
     \addCaseUseStep{ZMGestión pasa el estado del presupuesto a `Creado' y muestra un mensaje indicando el éxito de la operacion.}
 }
