--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/modificarProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/modificarProducto.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador selecciona el producto que desea modificar.}
-    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos del producto seleccionado para que el administrador modifique: nombre, categoría, grupo, tipo de producto, cantidad de metros de tela necesario para producirlo y precio. Indicando que todos los campos menos la cantidad de metros de tela son requeridos.}
+    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos del producto seleccionado para que el administrador modifique: nombre, categoría, grupo, tipo de producto, cantidad de metros de tela necesario para producirlo, observaciones y precio. Indicando que todos los campos menos la cantidad de metros de tela y observaciones son obligatorios.}
     \addCaseUseStep{El administrador modifica los campos que desea cambiar.}
     \addCaseUseStep{ZMGestion modifica el producto asignando al producto los valores que hayan sido modificados y muestra un mensaje indicando el éxito de la operación.}
 }
