--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/crearComprobante.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/crearComprobante.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El vendedor selecciona la venta a la cual desea agregarle un comprobante.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor ingrese, el tipo y número de comprobante y el monto total. Indicando que todos los campos son obligatorios. }
+    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor ingrese, el tipo y número de comprobante, el monto total y obserevaciones. Indicando que todos los campos son obligatorios excepto el de obserevaciones.}
     \addCaseUseStep{El vendedor completa el formulario.}
     \addCaseUseStep{ZMGestion crea el formulario y lo asocia a la venta indicada.}
 }
