--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/crearVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/crearVenta.tex
@@ -14,8 +14,8 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El vendedor accede a la pantalla para crear ventas.}
-    \addCaseUseStep{ZMGestion le muestra un formulario para que el vendedor seleccione un cliente.}
-    \addCaseUseStep{El vendedor selecciona un cliente.}%3
+    \addCaseUseStep{ZMGestion le muestra un formulario para que el vendedor seleccione un cliente y agregue observaciones. Indicando que el solamente es obligatorio el campo de cliente.}
+    \addCaseUseStep{El vendedor selecciona un cliente e ingresa observaciones.}%3
     \addCaseUseStep{ZMGestion crea una venta en estado de `En creación' para el cliente seleccionado.}%4
     \addCaseUseStep{Si el vendedor desea agregar una linea de venta se ejecuta el \CUcrearLineaVenta\ (Crear linea de venta). Si el vendedor desea quitar una linea de venta ejecuta el \CUborrarLineaVenta\ (Borrar linea de venta). Si el vendedor desea modificar una linea de venta se ejecuta el \CUmodificarLineaVenta\ (Modificar linea de venta)}%5
     \addCaseUseStep{ZMGestion verifica que todas las lineas de venta tengan el precio actual del producto a vender.}%6
