modelo de ciclo de vida y metodologia de desarrollo de software

--- a/Informe Final/Capitulo3.tex
+++ b/Informe Final/Capitulo3.tex
@@ -1,9 +1,9 @@
-\chapter{Selección del modelo de ciclo de vida y gestión del proyecto}
+\chapter{Selección del modelo de ciclo de vida y metodología de desarrollo de Software}
 \label{ch:capitulo3}
 \markboth{CAPÍTULO \ref*{ch:capitulo3}. Modelo de ciclo de vida y gestión del proyecto}{CAPÍTULO \ref*{ch:capitulo3}. Modelo de ciclo de vida y gestión del proyecto}
-%\input{capitulos/capitulo2/cap2sec1.tex}
-%\input{capitulos/capitulo2/cap2sec2.tex}
-%\input{capitulos/capitulo2/cap2sec3.tex}
+\input{Capitulos/Capitulo3/cap3sec1.tex}
+\input{Capitulos/Capitulo3/cap3sec2.tex}
+\input{Capitulos/Capitulo3/cap3sec3.tex}
 %\input{capitulos/capitulo2/cap2sec4.tex}
 %\input{capitulos/capitulo2/cap2sec4-1.tex}
 %\input{capitulos/capitulo2/cap2sec4-2.tex}
