--- a/Informe Final/Capitulo4.tex
+++ b/Informe Final/Capitulo4.tex
@@ -3,4 +3,4 @@
 \markboth{CAPÍTULO \ref*{ch:capitulo4}. Especificación C}{CAPÍTULO \ref*{ch:capitulo4}. Especificación C}
 \input{Capitulos/Capitulo4/cap4sec1.tex}
 \input{Capitulos/Capitulo4/cap4sec2.tex}
-%\input{Capitulos/capitulo4/cap4sec3.tex}
+\input{Capitulos/Capitulo4/cap4sec3.tex}
