--- a/Informe Final/Documentacion.tex
+++ b/Informe Final/Documentacion.tex
@@ -138,9 +138,9 @@ unicode	]{hyperref}
 \input{Capitulo3.tex}
 \input{Capitulo4.tex}
 \input{Capitulo5.tex}
-%\input{Capitulo6.tex}
-%\input{Capitulo7.tex}
-%\input{Capitulo8.tex}
-%\input{Capitulo9.tex}
+\input{Capitulo6.tex}
+\input{Capitulo7.tex}
+\input{Capitulo8.tex}
+\input{Capitulo9.tex}
 %\input{Capitulo10.tex}
 \end{document}
