--- a/Informe Final/Capitulo5.tex
+++ b/Informe Final/Capitulo5.tex
@@ -2,5 +2,6 @@
 \label{ch:capitulo5} 
 \markboth{CAPÍTULO \ref*{ch:capitulo5}. Especificación D}{CAPÍTULO \ref*{ch:capitulo5}. Especificación D}
 \input{Capitulos/Capitulo5/cap5modeloRelacional.tex}
+\input{Capitulos/Capitulo5/cap5arquitecturaFisica.tex}
 %\input{capitulos/capitulo4/cap4sec2.tex}
 %\input{capitulos/capitulo4/cap4sec3.tex}
